# goDLL

./: .gitignore  dllAPI.h  main_cgo.go  main_loadlibary.go  main_sharedMem.go
c_code/: CMakeLists.txt  hello.cpp  hello.h  main.cpp
c_code/test/: CMakeLists.txt  main.cpp
testBin/: index.html
